--- a/.gitignore
+++ b/.gitignore
@@ -401,6 +401,22 @@ Source/Sort/Fortran/bubble_sort/bubble-sort_fortran
 #### Rust
 Source/Sort/Rust/bubble_sort/bubble-sort_rust
 
+## Binary trees
+### Binary trees
+#### C
+    Source/BinaryTrees/C/binary_trees/binary-trees_c
+
+#### C++
+    Source/BinaryTrees/C++/binary_trees/binary-trees_cpp
+    Source/BinaryTrees/C++/binary_trees/binary-trees_smartPtr_cpp
+
+#### Fortran
+    Source/BinaryTrees/Fortran/binary_trees/binary-trees_fortran
+
+#### Rust
+    Source/BinaryTrees/Rust/binary_trees/binary-trees_rust
+
+
 
 
 
