Ecriture de l'algo Fannkuch en C++, fortran, java, ruby; mise à jour du script run_fannkuch.sh; mise à jour du gitignore pour ingnorer les exécutables

--- a/.gitignore
+++ b/.gitignore
@@ -417,6 +417,20 @@ Source/BinaryTrees/Fortran/binary_trees/binary-trees_fortran
 Source/BinaryTrees/Rust/binary_trees/binary-trees_rust
 
 
+## Fannkuch
+### Fannkuch redux
+#### C
+Source/Fannkuch/C/fannkuch_redux/fannkuch-redux_c
+
+#### C++
+Source/Fannkuch/C++/fannkuch_redux/fannkuch-redux_cpp
+
+#### Fortran
+Source/Fannkuch/Fortran/fannkuch_redux/fannkuch-redux_fortran
+
+#### Rust
+Source/Fannkuch/Rust/fannkuch_redux/fannkuch-redux_rust
+
 
 
 
