Création d'un script bash qui exécute fibonacci en appelant le script python measure_multiple_exec.py (pour exécuter 30 fois chaque algo et stocker les résultats obtenus dans un fichier CSV)

--- a/.gitignore
+++ b/.gitignore
@@ -445,6 +445,10 @@ Source/Algo/Fasta/Fortran/fasta/fasta_fortran
 #### Rust
 Source/Algo/Fasta/Rust/fasta/fasta_rust
 
+# Script exec file
+## Recursion
+Source/Scripts/scripts-bash/Recursion_Fibo_30_times/fibonacci
+
 
 
 
