Ajout du nom du nom de la machine dan la nom du fichier csv pour sauvegarder les résultats après 30 réplications; correction d'une erreur du chemin sur erlang dans le script run_30_replications_fibo.sh; Début du script pour les réplications de bubble_sort

--- a/.gitignore
+++ b/.gitignore
@@ -449,6 +449,9 @@ Source/Algo/Fasta/Rust/fasta/fasta_rust
 ## Recursion
 Source/Scripts/scripts-bash/Recursion_Fibo_30_times/fibonacci
 
+## Bubble_sort
+
+
 
 
 
