Mise à jour du gitignore pour ignorer les exécutables de bubble_sort

--- a/.gitignore
+++ b/.gitignore
@@ -450,7 +450,8 @@ Source/Algo/Fasta/Rust/fasta/fasta_rust
 Source/Scripts/scripts-bash/Recursion_Fibo_30_times/fibonacci
 
 ## Bubble_sort
-
+Source/Scripts/scripts-bash/Bubble_sort_30_times/bubble_sort
+Source/Scripts/scripts-bash/Bubble_sort_30_times/bubble-sort
 
 
 
