--- a/.gitignore
+++ b/.gitignore
@@ -445,13 +445,18 @@ Source/Algo/Fasta/Fortran/fasta/fasta_fortran
 #### Rust
 Source/Algo/Fasta/Rust/fasta/fasta_rust
 
-# Script exec file
+# Script 30 rep exec file
 ## Recursion
 Source/Scripts/scripts-bash/Recursion_Fibo_30_times/fibonacci
 
 ## Bubble_sort
 Source/Scripts/scripts-bash/Bubble_sort_30_times/bubble_sort
 Source/Scripts/scripts-bash/Bubble_sort_30_times/bubble-sort
+
+## Binary_Trees
+Source/Scripts/scripts-bash/BinaryTrees_30_times/binary-trees
+Source/Scripts/scripts-bash/BinaryTrees_30_times/binary_trees
+
 
 
 
