Mise à jour du script measure_multiple_exec.py en y ajoutant la gestion des arguments et en rendant paramètrable le nombre de réplications; Adaptation des scripts run_30_replications_fibo.sh, run_30_replications_bubble-sort.sh et run_30_replications_bubble-sort.sh ; Mise à jour du gitignore pour ingorer les exécutavles de fannkuch; Adaptation des algo de fannkuch pour qu'il prenne tous un paramètre en entrée

--- a/.gitignore
+++ b/.gitignore
@@ -457,6 +457,9 @@ Source/Scripts/scripts-bash/Bubble_sort_30_times/bubble-sort
 Source/Scripts/scripts-bash/BinaryTrees_30_times/binary-trees
 Source/Scripts/scripts-bash/BinaryTrees_30_times/binary_trees
 
+## Fannkuch
+Source/Scripts/scripts-bash/Fannkuch_30_times/fannkuch-redux
+
 
 
 
