Modification du script measure_multiple_exec.py pour gérer les problèmes d'éxécution d'erlang; Ajout du script d'exécution de 30 réplications de Fasta; Mise à jour du gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -461,7 +461,8 @@ Source/Scripts/scripts-bash/BinaryTrees_30_times/binary_trees
 Source/Scripts/scripts-bash/Fannkuch_30_times/fannkuch-redux
 
 
-
+## Fasta
+Source/Scripts/scripts-bash/Fasta_30_times/fasta
 
 
 
